<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailFilmActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="?attr/colorPrimary"
            >

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/poster"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/white"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="From the darkness, the ultimate fighter rises."
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toBottomOf="@+id/rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagline" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_small"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/star"
                app:layout_constraintTop_toBottomOf="@+id/tagline"
                tools:text="8.0" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginEnd="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="end"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rating"
                app:layout_constraintTop_toBottomOf="@+id/tagline"
                tools:text="Drama, Mystery, Comedy" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/description"
                android:textSize="@dimen/medium_font_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/star" />

            <TextView
                android:id="@+id/description_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_margin_small_medium"
                android:layout_marginEnd="@dimen/activity_margin_medium_large"
                app:layout_constraintTop_toBottomOf="@+id/description"
                tools:text="Lorem Ipsum" />


            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/release_date"
                android:textSize="@dimen/medium_font_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_value" />

            <TextView
                android:id="@+id/release_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_margin_small_medium"
                android:layout_marginEnd="@dimen/activity_margin_medium_large"
                app:layout_constraintTop_toBottomOf="@+id/release_date"
                tools:text="2014-01-01" />

            <TextView
                android:id="@+id/original_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/original_language"
                android:textSize="@dimen/medium_font_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/release_date_value" />

            <TextView
                android:id="@+id/original_language_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_margin_small_medium"
                android:layout_marginEnd="@dimen/activity_margin_medium_large"
                app:layout_constraintTop_toBottomOf="@+id/original_language"
                tools:text="en" />

            <TextView
                android:id="@+id/poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/poster"
                android:textSize="@dimen/medium_font_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/original_language_value" />

            <ImageView
                android:id="@+id/poster_value"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="@dimen/activity_margin_medium_large"
                android:layout_marginTop="@dimen/activity_margin_small_medium"
                android:layout_marginEnd="@dimen/activity_margin_medium_large"
                app:layout_constraintTop_toBottomOf="@+id/poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/poster"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/activity_margin_medium_large"
        android:layout_marginBottom="@dimen/activity_margin_medium_large"
        app:fabSize="normal"
        android:src="@drawable/ic_thumb_up"
        android:contentDescription="@string/fab"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>