<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favourite"
        android:title="@string/favourite_menu"
        android:icon="@drawable/ic_favourite"
        app:showAsAction="always"/>
</menu>