<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="empty_film">Film data is empty</string>
    <string name="poster">Poster</string>
    <string name="network_error">No Internet Connection. Please check your connection</string>
    <string name="other_error">An error has occurred</string>
    <string name="retry">Retry</string>
    <string name="star">star</string>
    <string name="original_language">Original Language</string>
    <string name="fab">fab</string>
    <string name="favourite_menu">Favourite</string>
    <string name="title_favourite_movies">Favourite Movies</string>

    <string name="not_favourite_film">Film has been removed from Favourite.</string>
    <string name="favourite_film">Film has been added to Favourite.</string>
</resources>